@@ -1,5 +1,7 @@
 2006-12-16  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gstring.c: Move more documentation inline.
+
 	* configure.in: Use AC_COMPILE_IFELSE for the monotonic
 	clock test.  (#362918, Han-Wen Nienhuys, Jeremy Lainé)
 
